--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header id="header">
         <a href="index.html" class="div-logo">
-            <img src="https://purepng.com/public/uploads/thumbnail//google-stadia-logo-hd4.png" alt="Logo"
-                id="header-img" width="50px" height="50px">
+            <img src="asset/icon/Google Stadia Logo - 640x640.png" alt="Logo" id="header-img" width="50px"
+                height="50px">
             <h1>CoursesNow!</h1>
         </a>
         <nav id="nav-bar">
@@ -24,9 +24,7 @@
 
     <section class="section-video">
         <video id="video" autoplay loop>
-            <source
-                src="https://cdn.pixabay.com/vimeo/191636243/computadora-portatil-6378.mp4?width=640&hash=05af684d7807f88fcbfba290bcf9da4b65a28aac"
-                type="video/mp4">
+            <source src="asset/videos/video (1080p).mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
