--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="JeremiasDuarteRosa">
+    <meta name="description" content="Product Landing Page">
+    <meta name="keywords" content="Product Landing Page">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="asset/icon/Google Stadia Logo - 640x640.png" type="image/x-icon">
     <title>Product Landing Page</title>
 </head>
 
@@ -29,42 +33,45 @@
         </video>
     </section>
 
-    <section id="section1" class="section-target target1">
-        <article>
-            <h2>Programming Fundamentals</h2>
-            <p>Learn the essential foundations of programming and algorithmic logic.</p>
-            <p>Price: $99</p>
-            <button>Enroll Now</button>
-        </article>
+    <main>
+        <section id="section1" class="section-target target1">
+            <article>
+                <h2>Programming Fundamentals</h2>
+                <p>Learn the essential foundations of programming and algorithmic logic.</p>
+                <p>Price: $99</p>
+                <button>Enroll Now</button>
+            </article>
 
-        <img src="asset/image/analysis-isometric-56fac.svg" alt="image isometric">
+            <img src="asset/image/analysis-isometric-56fac.svg" alt="image isometric">
 
-    </section>
+        </section>
 
-    <section id="section2" class="section-target target2">
+        <section id="section2" class="section-target target2">
 
-        <img src="asset/image/html-isometric.svg" alt="image isometric" class="img-float">
+            <img src="asset/image/html-isometric.svg" alt="image isometric" class="img-float">
 
-        <article class="Frontend">
-            <h2>Front-end Development</h2>
-            <p>Learn to create page structures and apply styles.</p>
-            <p>Price: $59</p>
-            <button>Enroll Now</button>
-        </article>
+            <article class="Frontend">
+                <h2>Front-end Development</h2>
+                <p>Learn to create page structures and apply styles.</p>
+                <p>Price: $59</p>
+                <button>Enroll Now</button>
+            </article>
 
-    </section>
+        </section>
 
-    <section id="section3" class="section-target target3">
-        <article class="Backend">
-            <h2>Back-end Development</h2>
-            <p>Learn to handle data on the server and work with databases.</p>
-            <p>Price: $89</p>
-            <button>Enroll Now</button>
-        </article>
+        <section id="section3" class="section-target target3">
+            <article class="Backend">
+                <h2>Back-end Development</h2>
+                <p>Learn to handle data on the server and work with databases.</p>
+                <p>Price: $89</p>
+                <button>Enroll Now</button>
+            </article>
 
-        <img src="asset/image/analysis-isometric-56fac.svg" alt="image isometric">
+            <img src="asset/image/analysis-isometric-56fac.svg" alt="image isometric">
 
-    </section>
+        </section>
+    </main>
+
 
     <footer>
         <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
